--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,11 @@ h1 span {
 	color: blue;
 	font-size: 1.5em;
 }
+/* 
+#right-answer {
+	border: 4px solid black;
+} */
+
+#zodiac-img {
+	object-fit: cover;
+}
